--- a/MemoryGame/MemoryGame/Invoer scherm.xaml
+++ b/MemoryGame/MemoryGame/Invoer scherm.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="8*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-    <Grid x:Name="VerdelingRow0Grid">
+        <Grid x:Name="VerdelingRow0Grid">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="9*"/>
                 <ColumnDefinition Width="10*"/>
@@ -38,8 +38,8 @@
                     </Grid.Background>
                 </Grid>
             </Grid>
-    </Grid>
-    <Grid x:Name="VerdelingRow1Grid" Grid.Row="1">
+        </Grid>
+        <Grid x:Name="VerdelingRow1Grid" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2.5*"/>
                 <ColumnDefinition Width="3*"/>
@@ -72,11 +72,25 @@
                         <Grid.Background>
                             <ImageBrush ImageSource="Images/Invoerbalk.jpeg"/>
                         </Grid.Background>
+                        <TextBox x:Name="Speler1naam" HorizontalAlignment="Left" Height="57" Margin="24,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="239" Background="{x:Null}" BorderBrush="{x:Null}" FontFamily="American Purpose" FontSize="44" SelectionBrush="{x:Null}" Foreground="#FF2D96A6" MaxLines="1" MaxLength="8">
+                            <TextBox.Template>
+                                <ControlTemplate TargetType="{x:Type TextBox}">
+                                    <ScrollViewer Name="PART_ContentHost"/>
+                                </ControlTemplate>
+                            </TextBox.Template>
+                        </TextBox>
                     </Grid>
                     <Grid x:Name="Invoerbalk2Grid" Grid.Row="3" Grid.Column="1">
                         <Grid.Background>
                             <ImageBrush ImageSource="Images/Invoerbalk.jpeg"/>
                         </Grid.Background>
+                        <TextBox x:Name="Speler2naam" HorizontalAlignment="Left" Height="57" Margin="24,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="239" Background="{x:Null}" BorderBrush="{x:Null}" FontFamily="American Purpose" FontSize="44" SelectionBrush="{x:Null}" Foreground="#FF2D96A6" MaxLines="1" MaxLength="8">
+                            <TextBox.Template>
+                                <ControlTemplate TargetType="{x:Type TextBox}">
+                                    <ScrollViewer Name="PART_ContentHost"/>
+                                </ControlTemplate>
+                            </TextBox.Template>
+                        </TextBox>
                     </Grid>
                     <Grid x:Name="VerdelingStartButtonGrid" Grid.Row="5" Grid.Column="1">
                         <Grid.ColumnDefinitions>
@@ -92,6 +106,6 @@
                     </Grid>
                 </Grid>
             </Grid>
-        </Grid>  
+        </Grid>
     </Grid>
 </Page>
