--- a/MemoryGame/MemoryGame/Speelveld.xaml
+++ b/MemoryGame/MemoryGame/Speelveld.xaml
@@ -89,6 +89,11 @@
                     <ImageBrush ImageSource="assets/timerbuttonSpeelV.png"/>
                 </Grid.Background>
             </Grid>
+            <Grid x:Name="Spelerbeurt1" Grid.Column="1" Grid.Row="1">
+                <Grid.Background>
+                    <ImageBrush ImageSource="assets/beurtSpeelV.png"/>
+                </Grid.Background>
+            </Grid>
             <Grid x:Name="Speler1" Grid.Column="1" Grid.Row="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="0.3*"/>
@@ -101,12 +106,21 @@
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
                 <Grid x:Name="Speler1text" Grid.Column="1" Grid.Row="1">
+                    <TextBlock Name="Speler1score" VerticalAlignment="Center" HorizontalAlignment="Right" Text="" FontFamily="American Purpose" FontSize="27" Foreground="#ffffff" TextWrapping="Wrap">
+                            0000
+                    </TextBlock>
                     <Viewbox>
-                        <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="" FontFamily="American Purpose" FontSize="24" Foreground="#ffffff" Width="150" TextWrapping="Wrap">
-                            <Run Text="Speler 1: " Foreground="#32d6cf"/><Run Text="0000" />
+                        <TextBlock Name="Speler1naam" VerticalAlignment="Center" HorizontalAlignment="Center" Text="" FontFamily="American Purpose" FontSize="24" Foreground="#32d6cf" Width="160" TextWrapping="Wrap">
+                            Speler 1:
                         </TextBlock>
                     </Viewbox>
+                    
                 </Grid>
+            </Grid>
+            <Grid x:Name="Spelerbeurt2" Grid.Column="5" Grid.Row="1">
+                <Grid.Background>
+                    <ImageBrush ImageSource="assets/beurtSpeelV.png"/>
+                </Grid.Background>
             </Grid>
             <Grid x:Name="Speler2" Grid.Column="5" Grid.Row="1">
                 <Grid.RowDefinitions>
@@ -120,9 +134,12 @@
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
                 <Grid x:Name="Speler2text" Grid.Column="1" Grid.Row="1">
+                    <TextBlock Name="Speler2score" VerticalAlignment="Center" HorizontalAlignment="Right" Text="" FontFamily="American Purpose" FontSize="27" Foreground="#ffffff" TextWrapping="Wrap">
+                            0000
+                    </TextBlock>
                     <Viewbox>
-                        <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="" FontFamily="American Purpose" FontSize="24" Foreground="#ffffff" Width="150" TextWrapping="Wrap">
-                            <Run Text="Speler 2: " Foreground="#32d6cf"/><Run Text="0000" />
+                        <TextBlock Name="Speler2naam" VerticalAlignment="Center" HorizontalAlignment="Center" Text="" FontFamily="American Purpose" FontSize="24" Foreground="#32d6cf" Width="160" TextWrapping="Wrap">
+                            Speler 2:
                         </TextBlock>
                     </Viewbox>
                 </Grid>
