--- a/MemoryGame/MemoryGame/MainWindow.xaml
+++ b/MemoryGame/MemoryGame/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MemoryGame"
         mc:Ignorable="d"
         ResizeMode="CanMinimize"
-        Title="MainWindow" Height="500" Width="850"
+        Title="Memory Game" Height="500" Width="850"
         SizeToContent="WidthAndHeight">
     <Grid>
         <Grid.RowDefinitions>
