--- a/MemoryGame/MemoryGame/Kindwinscherm.xaml
+++ b/MemoryGame/MemoryGame/Kindwinscherm.xaml
@@ -18,7 +18,7 @@
             <ColumnDefinition Width="0.5*"/>
         </Grid.ColumnDefinitions>
         <Grid.Background>
-            <ImageBrush ImageSource="Images/achtergrondKind.png"/>
+            <ImageBrush ImageSource="Images/achtergrondKindWin.png"/>
         </Grid.Background>
         <Grid x:Name="witvlakGrid" Grid.Row="1" Grid.Column="1">
             <Grid.ColumnDefinitions>
